# codebase-rag

./: .gitattributes  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  TECHNICAL_DESCRIPTION.md  chat.html  env.example  index.html  optimized_chat.html  optimized_config.py  pyproject.toml  requirements.txt  setup.py  start.html  web_interface_old.html
..bfg-report/2025-07-17/18-33-19/: cache-stats.txt  deleted-files.txt  (+1 more)
chromadb_data/: chroma.sqlite3  chroma.sqlite3.REMOVED.git-id
chromadb_data/cd5e2de4-f42c-4ef1-85cc-6568def21d7c/: data_level0.bin.REMOVED.git-id  index_metadata.pickle
data/vector_db/: chroma.sqlite3
docs/: CODE_AWARE_MODELS_GUIDE.md  CODE_SAVVY_MODELS_GUIDE.md  EMBEDDING_GENERATION_GUIDE.md  ENHANCED_CHUNKING_GUIDE.md  GENERATION_AND_POST_PROCESSING_GUIDE.md
embeddings/: embeddings.npy  embeddings.npy.REMOVED.git-id  metadata.json  metadata.json.REMOVED.git-id  model_info.json
scripts/: advanced_query_chromadb.py  assemble_context.py  build_chromadb_index.py  cleanup_models.sh  cost_calculator.py  demo.py  demo_code_aware_models.py  demo_collection.py  demo_enhanced_chunking.py  demo_generation_models.py  embed_codebase.py  optimized_rag_api_server.py  query_chromadb.py  rag_api_server.py  setup.sh  setup_free_api.sh  setup_models.sh  simple_embedding_demo.py  test_enhanced_generation.py  test_generation_models.py  test_hf_api.py  test_models.py  test_ollama.py  test_prompt_construction.py
src/codebase_rag/: __init__.py  cli.py  config.py
src/codebase_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+26 files in other folders)
